--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: "java"
 
-sourceCompatibility = 1.6
-sourceSets.main.java.srcDirs = [ "src/" ]
+sourceCompatibility = 1.8
+sourceSets.main.java.srcDirs = [ "src/main/java", "src/main/resources", "src/test/java", "src/test/resources" ]
 
 project.ext.mainClassName = "org.crumbleworks.forge.karmen.desktop.DesktopLauncher"
 project.ext.assetsDir = new File("../core/assets");
